--- a/fonts/fonts setup.css
+++ b/fonts/fonts setup.css
@@ -23,7 +23,7 @@
     src:url('../fonts/Amperzand.ttf') format('truetype');
 }
 
-.Pname{
+.Pname,.uname{
     font-family: Amperzands;
     font-style: italic;
 }
