--- a/css/account/main.css
+++ b/css/account/main.css
@@ -3,33 +3,17 @@ body{
 }
 .head{position: fixed;
     width: 100%;
-    left: 0;
-    top: 0;
+    float: left;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.head img[pickup="scrolled"]{
-    margin-left: 40vw;
-    margin-right: 40vw;
-    width:20vw;
-    height: 20vw;
-}
-.head img[pickup="fixed"]{
-    margin-left: 40px;
-    width:90px;
-    height:90px;
-}
-
 .head .uname{
     margin: 0px;
-    margin-bottom: 20px;
-    width: 100vw;
-    font-size: 28px;
-    font-weight: bolder;
-    padding: 10px 0px;
-    text-align: center;
-    font-family:  sans-serif;
+    margin-left: 35px;
+    float: left;
+    font-size: 25px;
+    cursor: pointer;
 }
 .head .uname[pickup="fixed"]{
     margin-top: -80px
@@ -38,12 +22,12 @@ body{
 
 .side-one{
     position: fixed;
-  
+  margin-top: 75px;
 }
 .side-one ul{
     list-style-type: none;
     padding-left: 0px;
-    margin:20px 0px;
+    margin:0px 0px;
 }
 .side-one li {
   padding: 7px;
@@ -74,7 +58,7 @@ body{
 /* navigation div start */
 .part{
     margin-left:30px;
-    padding-top:110px;
+    padding-top:80px;
     float:left;
 }
 .part h2{
@@ -207,6 +191,18 @@ form.full input[width="more-half"]{
     float: left;
 }
 
+.options {
+margin-right:10px; 
+float: right;
+font-size: 20px;
+}
+.popbase a{
+    display:  inline-block;
+}
+.options a span{
+padding:0px 20px 0px 5px;
+text-decoration:none;
+}
 @media (max-width:992px){
  form.full input[width="half"]{
     width: 95%;
@@ -234,11 +230,7 @@ form.full input[width="more-half"]{
      form.full input[width="auto"]{ 
     margin-right: 0px;
 }
-.head img[pickup="fixed"]{
-    margin-left: 10px;
-    width:70px;
-    height:70px;
-}
+
 .head .uname[pickup="fixed"]{
     margin-top: -60px;
     margin-bottom: 0px;
@@ -279,6 +271,9 @@ form.full input[width="more-half"]{
     }
     .body{
         margin-left: 0px;
+    }
+    .head .uname{
+        margin-left: 15px;
     }
 }
 
